mev-boost can be source-built

--- a/default.env
+++ b/default.env
@@ -171,7 +171,9 @@ ETH_DOCKER_TAG=
 SSV_NODE_TAG=latest
 
 # MEV-Boost
-# If mev-boost terminates with a SIGILL, make this one of the "portable" tags
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
+MEV_SRC_BUILD_TARGET=develop
+MEV_SRC_REPO=https://github.com/flashbots/mev-boost
 MEV_DOCKER_TAG=latest
 MEV_DOCKER_REPO=flashbots/mev-boost
 MEV_DOCKERFILE=Dockerfile.binary
@@ -295,4 +297,4 @@ DDNS_TAG=3
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=4
+ENV_VERSION=5
