--- a/flashbots/Dockerfile.binary
+++ b/flashbots/Dockerfile.binary
@@ -2,6 +2,10 @@ ARG DOCKER_TAG
 ARG DOCKER_REPO
 FROM ${DOCKER_REPO}:${DOCKER_TAG}
 
+# Unused, this is here to avoid build time complaints
+ARG BUILD_TARGET
+ARG SRC_REPO
+
 ARG USER=mev
 ARG UID=10666
 
