--- a/geth.yml
+++ b/geth.yml
@@ -79,6 +79,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/debug/metrics/prometheus
       - metrics.port=6060
+      - metrics.instance=execution
 
   set-prune-marker:
     profiles: ["tools"]
