--- a/grafana.yml
+++ b/grafana.yml
@@ -30,6 +30,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=9090
+      - metrics.instance=prometheus
 
   ethereum-metrics-exporter:
     restart: "unless-stopped"
@@ -46,6 +47,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=9090
+      - metrics.instance=ethereum-metrics-exporter
 
   node-exporter:
     image: prom/node-exporter:latest
@@ -69,6 +71,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=9100
+      - metrics.instance=node-exporter
 
   blackbox-exporter:
     restart: "unless-stopped"
@@ -94,6 +97,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=7979
+      - metrics.instance=json-exporter
 
   cadvisor:
     restart: "unless-stopped"
@@ -112,6 +116,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8080
+      - metrics.instance=cadvisor
 
   promtail:
     image: grafana/promtail:latest
@@ -133,6 +138,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=9080
+      - metrics.instance=promtail
 
   loki:
     image: grafana/loki:latest
@@ -147,6 +153,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=3100
+      - metrics.instance=loki
 
   grafana:
     restart: "unless-stopped"
@@ -174,6 +181,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=3000
+      - metrics.instance=grafana
 
 volumes:
   grafana-data:
