--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -71,6 +71,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8009
+      - metrics.instance=validator
 
   validator-exit:
     profiles: ["tools"]
