--- a/lodestar.yml
+++ b/lodestar.yml
@@ -81,6 +81,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8008
+      - metrics.instance=consensus
 
   validator:
     restart: "unless-stopped"
@@ -138,6 +139,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8009
+      - metrics.instance=validator
 
   validator-exit:
     profiles: ["tools"]
