--- a/nethermind.yml
+++ b/nethermind.yml
@@ -86,6 +86,8 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=6060
+      - metrics.instance=execution
+
 volumes:
   nm-eth1-data:
   jwtsecret:
