--- a/nimbus.yml
+++ b/nimbus.yml
@@ -78,6 +78,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8008
+      - metrics.instance=consensus
 
   validator:
     restart: "unless-stopped"
@@ -122,6 +123,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8009
+      - metrics.instance=validator
 
   validator-exit:
     profiles: ["tools"]
