--- a/lighthouse-cl-only.yml
+++ b/lighthouse-cl-only.yml
@@ -84,6 +84,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8008
+      - metrics.instance=consensus
 
 volumes:
   lhconsensus-data:
