--- a/lodestar-cl-only.yml
+++ b/lodestar-cl-only.yml
@@ -79,6 +79,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8008
+      - metrics.instance=consensus
 
 volumes:
   lsconsensus-data:
