--- a/nimbus-legacy.yml
+++ b/nimbus-legacy.yml
@@ -82,6 +82,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8008
+      - metrics.instance=consensus
 
   wipe-db:
     profiles: ["tools"]
