--- a/prysm-cl-only.yml
+++ b/prysm-cl-only.yml
@@ -86,6 +86,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8008
+      - metrics.instance=consensus
 
 volumes:
   prysmconsensus-data:
