--- a/prysm.yml
+++ b/prysm.yml
@@ -87,6 +87,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8008
+      - metrics.instance=consensus
 
   validator:
     restart: "unless-stopped"
@@ -150,6 +151,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8009
+      - metrics.instance=validator
 
   create-wallet:
     profiles: ["tools"]
