--- a/reth.yml
+++ b/reth.yml
@@ -84,6 +84,8 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=6060
+      - metrics.instance=execution
+
 volumes:
   reth-el-data:
   jwtsecret:
