--- a/ssv.yml
+++ b/ssv.yml
@@ -28,6 +28,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=15000
+      - metrics.instance=ssv
 
 volumes:
   ssv-data:
