--- a/teku-cl-only.yml
+++ b/teku-cl-only.yml
@@ -80,6 +80,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8008
+      - metrics.instance=consensus
 
 volumes:
   tekuconsensus-data:
