--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -66,6 +66,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8009
+      - metrics.instance=validator
 
   validator-exit:
     profiles: ["tools"]
