--- a/traefik-cf.yml
+++ b/traefik-cf.yml
@@ -45,6 +45,7 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=8080
+      - metrics.instance=traefik
     <<: *logging
 
   cf-ddns:
