--- a/grafana/datasource.yml
+++ b/grafana/datasource.yml
@@ -16,6 +16,7 @@ datasources:
     type: prometheus
     access: proxy
     orgId: 1
+    uid: PBFA97CFB590B2093
     url: http://prometheus:9090
     basicAuth: false
     isDefault: true
@@ -26,5 +27,6 @@ datasources:
     type: loki
     access: proxy
     orgId: 1
+    uid: P8E80F9AEF21F6940
     url: http://loki:3100
     editable: true
