--- a/besu.yml
+++ b/besu.yml
@@ -82,6 +82,16 @@ services:
       - metrics.port=6060
       - metrics.instance=execution
 
+  set-prune-marker:
+    profiles: ["tools"]
+    image: alpine:3
+    user: "10001:10001"
+    restart: "no"
+    volumes:
+      - besu-eth1-data:/var/lib/besu
+    entrypoint: ["/bin/sh","-c"]
+    command: /bin/sh
+
 volumes:
   besu-eth1-data:
   jwtsecret:
