Support separate ancient dir for Geth

--- a/default.env
+++ b/default.env
@@ -30,6 +30,9 @@ WEB3SIGNER=false
 # Whether to explicitly enable IPv6 P2P. See https://ethdocker.com/Support/ipv6
 # Also add ipv6.yml to COMPOSE_FILE for IPv6.
 IPV6=false
+# Directory to keep ancient data. In use for Geth, optional.
+# If you use this, make sure to chown the directory to uid 10001
+ANCIENT_DIR=
 
 # Promtail logs label, something unique like the server name
 LOGS_LABEL=eth-docker
@@ -297,4 +300,4 @@ DDNS_TAG=3
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=6
+ENV_VERSION=7
