--- a/nimbus-allin1.yml
+++ b/nimbus-allin1.yml
@@ -1,5 +1,4 @@
 # Nimbus consensus also handles validator keys: All In One
-version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
@@ -26,6 +25,7 @@ services:
       target: consensus
       <<: *nimbus-build
     image: nimbus:local
+    pull_policy: build
     user: user
     stop_grace_period: 1m
     volumes:
@@ -106,6 +106,7 @@ services:
       target: consensus
       <<: *nimbus-build
     image: nimbus:local
+    pull_policy: build
     user: root
     volumes:
       - /etc/localtime:/etc/localtime:ro
@@ -125,6 +126,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
+    pull_policy: build
     user: root
     volumes:
       - nimbus-data:/var/lib/nimbus
