--- a/besu.yml
+++ b/besu.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
@@ -20,6 +19,7 @@ services:
         - DOCKER_TAG=${BESU_DOCKER_TAG:-latest}
         - DOCKER_REPO=${BESU_DOCKER_REPO:-hyperledger/besu}
     image: besu:local
+    pull_policy: build
     user: besu
     environment:
       - JAVA_OPTS=${BESU_HEAP:--Xmx5g}
@@ -32,8 +32,8 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - jwtsecret:/var/lib/besu/ee-secret
     ports:
-      - ${HOST_IP:-}${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/tcp
-      - ${HOST_IP:-}${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/udp
+      - ${HOST_IP:-}:${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/tcp
+      - ${HOST_IP:-}:${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/udp
     networks:
       default:
         aliases:
