--- a/nimbus-cl-only.yml
+++ b/nimbus-cl-only.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
@@ -25,6 +24,7 @@ services:
       target: consensus
       <<: *nimbus-build
     image: nimbus:local
+    pull_policy: build
     user: user
     stop_grace_period: 1m
     volumes:
@@ -47,8 +47,8 @@ services:
       - WEB3SIGNER=false
       - EMBEDDED_VC=false
     ports:
-      - ${HOST_IP:-}${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
-      - ${HOST_IP:-}${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
+      - ${HOST_IP:-}:${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
+      - ${HOST_IP:-}:${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
     networks:
       default:
         aliases:
@@ -89,6 +89,7 @@ services:
       target: consensus
       <<: *nimbus-build
     image: nimbus:local
+    pull_policy: build
     user: root
     volumes:
       - /etc/localtime:/etc/localtime:ro
