--- a/nimbus-vc-only.yml
+++ b/nimbus-vc-only.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
@@ -25,6 +24,7 @@ services:
       target: validator
       <<: *nimbus-build
     image: nimbus-validator:local
+    pull_policy: build
     user: user
     volumes:
       - nimbus-vc-data:/var/lib/nimbus
@@ -79,6 +79,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
+    pull_policy: build
     user: root
     volumes:
       - nimbus-vc-data:/var/lib/nimbus
