--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
@@ -25,6 +24,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
+    pull_policy: build
     user: prysmvalidator
     volumes:
       - prysmvalidator-data:/var/lib/prysm
@@ -88,6 +88,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
+    pull_policy: build
     user: prysmvalidator
     environment:
       - NETWORK=${NETWORK}
@@ -120,6 +121,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
+    pull_policy: build
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
@@ -145,6 +147,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
+    pull_policy: build
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
