--- a/default.env
+++ b/default.env
@@ -228,6 +228,14 @@ LS_DOCKER_TAG=latest
 LS_DOCKER_REPO=chainsafe/lodestar
 LS_DOCKERFILE=Dockerfile.binary
 
+# Grandine
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
+GRANDINE_SRC_BUILD_TARGET=master
+GRANDINE_SRC_REPO=https://github.com/sifraitech/grandine
+GRANDINE_DOCKER_TAG=latest
+GRANDINE_DOCKER_REPO=sifrai/grandine
+GRANDINE_DOCKERFILE=Dockerfile.binary
+
 # Web3Signer
 W3S_DOCKER_TAG=latest
 W3S_DOCKER_REPO=consensys/web3signer
@@ -297,4 +305,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=9
+ENV_VERSION=10
