--- a/lighthouse.yml
+++ b/lighthouse.yml
@@ -50,6 +50,7 @@ services:
       default:
         aliases:
           - eth2
+          - ${NETWORK}-consensus
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
