--- a/lighthouse-cl-only.yml
+++ b/lighthouse-cl-only.yml
@@ -49,6 +49,7 @@ services:
       default:
         aliases:
           - eth2
+          - ${NETWORK}-consensus
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
