--- a/prysm-cl-only.yml
+++ b/prysm-cl-only.yml
@@ -46,6 +46,7 @@ services:
       default:
         aliases:
           - eth2
+          - ${NETWORK}-consensus
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
