--- a/prysm.yml
+++ b/prysm.yml
@@ -46,6 +46,7 @@ services:
       default:
         aliases:
           - eth2
+          - ${NETWORK}-consensus
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
