--- a/teku-cl-only.yml
+++ b/teku-cl-only.yml
@@ -52,6 +52,7 @@ services:
       default:
         aliases:
           - eth2
+          - ${NETWORK}-consensus
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
