--- a/teku.yml
+++ b/teku.yml
@@ -52,6 +52,7 @@ services:
       default:
         aliases:
           - eth2
+          - ${NETWORK}-consensus
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
