Remove ipv6.yml

--- a/default.env
+++ b/default.env
@@ -28,7 +28,7 @@ AUTOPRUNE_NM=true
 # Whether to use web3signer for validator keys. Setting this to "true" also requires web3signer.yml in COMPOSE_FILE
 WEB3SIGNER=false
 # Whether to explicitly enable IPv6 P2P. See https://ethdocker.com/Support/ipv6
-# Also add ipv6.yml to COMPOSE_FILE for IPv6.
+# Needs to be false or true for Eth Docker to work
 IPV6=false
 # Directory to keep ancient data. In use for Geth, optional.
 # If you use this, make sure to chown the directory to uid 10001
@@ -296,4 +296,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=8
+ENV_VERSION=9
