--- a/lodestar.yml
+++ b/lodestar.yml
@@ -74,7 +74,7 @@ services:
       - 0.0.0.0
       - --execution.urls
       - ${EL_NODE}
-      - --jwt-secret
+      - --jwtSecret
       - /var/lib/lodestar/consensus/ee-secret/jwtsecret
       - --targetPeers
       - ${CL_MAX_PEER_COUNT:-50}
@@ -163,9 +163,9 @@ services:
       - voluntary-exit
       - --dataDir
       - /var/lib/lodestar/validators
-      - --server
+      - --beaconNodes
       - http://consensus:5052
-      -  --logLevel
+      - --logLevel
       - ${LOG_LEVEL}
       - --network
       - ${NETWORK}
