--- a/default.env
+++ b/default.env
@@ -41,7 +41,6 @@ LOGS_LABEL=eth-docker
 DOMAIN=example.com
 ACME_EMAIL=user@example.com
 CF_DNS_API_TOKEN=SECRETTOKEN
-CF_ZONE_API_TOKEN=
 CF_ZONE_ID=
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
@@ -292,12 +291,12 @@ DEPCLI_SRC_REPO=https://github.com/ethereum/staking-deposit-cli
 # Does not (yet?) exist on Docker hub
 DEPCLI_DOCKER_TAG=nonesuch
 
-# traefik and cf-ddns
+# traefik and ddns-updater
 TRAEFIK_TAG=v2.10
-DDNS_TAG=3
+DDNS_TAG=v2
 
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=7
+ENV_VERSION=8
