--- a/default.env
+++ b/default.env
@@ -41,6 +41,7 @@ LOGS_LABEL=eth-docker
 DOMAIN=example.com
 ACME_EMAIL=user@example.com
 CF_DNS_API_TOKEN=SECRETTOKEN
+CF_ZONE_API_TOKEN=
 CF_ZONE_ID=
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
