ethd keys prepare-address-change with Prysm

--- a/prysm.yml
+++ b/prysm.yml
@@ -84,6 +84,7 @@ services:
       - "8008"
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+      - --enable-debug-rpc-endpoints
     labels:
       - metrics.scrape=true
       - metrics.path=/metrics
