--- a/prysm-cl-only.yml
+++ b/prysm-cl-only.yml
@@ -83,6 +83,7 @@ services:
       - "8008"
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+      - --enable-debug-rpc-endpoints
     labels:
       - metrics.scrape=true
       - metrics.path=/metrics
