Prometheus traefik uses the right service

--- a/prometheus-traefik.yml
+++ b/prometheus-traefik.yml
@@ -2,7 +2,7 @@
 # Please be very cautious, prometheus is not authenticated by default
 version: "3.9"
 services:
-  execution:
+  prometheus:
     labels:
       - traefik.enable=true
       - traefik.http.routers.${PROM_HOST:-prom}.service=${PROM_HOST:-prom}
