--- a/default.env
+++ b/default.env
@@ -3,6 +3,8 @@
 COMPOSE_FILE=teku.yml:besu.yml:deposit-cli.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 FEE_RECIPIENT=
+# Set the ETH address that validator rewards should be sent to
+WITHDRAWAL_CREDENTIALS=
 # Decide whether to connect the CL to Flashbots MEV boost, and configure the VC to register with it.
 # Set MEV_BOOST to "true" for MEV boost, or any other value including empty for not using MEV boost.
 # If "true" and used with a CL, it also requires :mev-boost.yml in COMPOSE_FILE
@@ -81,6 +83,9 @@ HOST_IP=
 # a limitation of compose V1, even when using compose V2
 SHARE_IP=
 
+# Relays to connect charon node
+OBOL_P2P_RELAYS=
+
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 EL_P2P_PORT=30303
@@ -115,6 +120,8 @@ ERIGON_P2P_PORT_3=30305
 # SSV Node ports
 SSV_P2P_PORT=13001
 SSV_P2P_PORT_UDP=12001
+# OBOL Node ports
+OBOL_P2P_PORT=3610
 # Engine port. Only for distributed setups, this should otherwise be left alone
 EE_PORT=8551
 # Consensus layer REST port. Only for distributed setups, this should otherwise be left alone
@@ -160,6 +167,8 @@ EL_NODE=http://execution:8551
 CL_NODE=http://consensus:5052
 # MEV-boost address. This would only be changed for Vouch setups
 MEV_NODE=http://mev-boost:18550
+# Beacon enpoint for OBOL node
+OBOL_NODE_BEACON_ENDPOINT=http://consensus:5052
 
 # You can set specific version targets and choose binary or compiled from source builds below,
 # via "Dockerfile.binary" or "Dockerfile.source"
@@ -172,6 +181,11 @@ ETH_DOCKER_TAG=
 
 # SSV
 SSV_NODE_TAG=latest
+
+# OBOL
+OBOL_NODE_TAG=latest
+OBOL_CLUSTER_NAME=
+OBOL_CLUSTER_ENR_LIST=
 
 # MEV-Boost
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
