fix: Obol integration

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ ext-network.yml
 ext-network.yml.original
 .eth/*
 .charon/*
+validator-ejector/*
 !.eth/README.md
 !.eth/validator_keys/.empty
 !.eth/exit_messages/.empty
