--- a/default.env
+++ b/default.env
@@ -161,6 +161,8 @@ JWT_SECRET=
 DISTRIBUTED=
 # Authenticated execution client endpoint. This default uses the execution node container.
 EL_NODE=http://execution:8551
+# EL node for Lido Validator Ejector
+VE_EXECUTION_NODE_URL=http://execution:8551
 # Consensus client address. This could be comma-separated for Lighthouse or Teku VC clients, with failover,
 # or could just be a remote consensus client URL for "validator only" setups.
 # For Nimbus VC client, put the first beacon node here, and use VC_EXTRAS for additional.
@@ -169,6 +171,9 @@ CL_NODE=http://consensus:5052
 MEV_NODE=http://mev-boost:18550
 # Beacon enpoint for OBOL node
 OBOL_NODE_BEACON_ENDPOINT=http://consensus:5052
+# Beacon enpoint for Lido Validator Ejector
+VE_BEACON_NODE_URL=http://consensus:5052
+LIDO_DV_EXIT_BEACON_NODE_URL=http://consensus:5052
 
 # You can set specific version targets and choose binary or compiled from source builds below,
 # via "Dockerfile.binary" or "Dockerfile.source"
@@ -182,10 +187,12 @@ ETH_DOCKER_TAG=
 # SSV
 SSV_NODE_TAG=latest
 
-# OBOL
+# Lido OBOL
 OBOL_NODE_TAG=latest
-OBOL_CLUSTER_NAME=
-OBOL_CLUSTER_ENR_LIST=
+VE_OPERATOR_ID=
+VE_STAKING_MODULE_ID=
+VE_LOCATOR_ADDRESS=
+VE_ORACLE_ADDRESSES_ALLOWLIST=
 
 # MEV-Boost
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
