--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
@@ -22,6 +21,7 @@ services:
     build:
       <<: *ls-build
     image: lodestar:local
+    pull_policy: build
     user: lsvalidator
     environment:
       - MEV_BOOST=${MEV_BOOST}
@@ -78,6 +78,7 @@ services:
     build:
       <<: *ls-build
     image: lodestar:local
+    pull_policy: build
     user: lsvalidator
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
@@ -103,6 +104,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
+    pull_policy: build
     user: root
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
