--- a/prysm.yml
+++ b/prysm.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
@@ -25,6 +24,7 @@ services:
       target: consensus
       <<: *prysm-build
     image: prysm-consensus:local
+    pull_policy: build
     user: prysmconsensus
     stop_grace_period: 1m
     volumes:
@@ -40,8 +40,8 @@ services:
       - ARCHIVE_NODE=${ARCHIVE_NODE:-}
       - NETWORK=${NETWORK}
     ports:
-      - ${HOST_IP:-}${PRYSM_PORT}:${PRYSM_PORT}/tcp
-      - ${HOST_IP:-}${PRYSM_UDP_PORT}:${PRYSM_UDP_PORT}/udp
+      - ${HOST_IP:-}:${PRYSM_PORT}:${PRYSM_PORT}/tcp
+      - ${HOST_IP:-}:${PRYSM_UDP_PORT}:${PRYSM_UDP_PORT}/udp
     networks:
       default:
         aliases:
@@ -97,6 +97,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
+    pull_policy: build
     user: prysmvalidator
     volumes:
       - prysmvalidator-data:/var/lib/prysm
@@ -162,6 +163,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
+    pull_policy: build
     user: prysmvalidator
     environment:
       - NETWORK=${NETWORK}
@@ -196,6 +198,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
+    pull_policy: build
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
@@ -223,6 +226,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
+    pull_policy: build
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
